fix: dragged the entire app kicking and screaming out of existential routing hell
Fixed the absolute nightmare clash between Spotify's standard redirect and Electron's HashRouter. Fixed the typos keeping the token resurrection spell dead. It works now. Do not touch it. Do not look at it. It is held together by pure magic and sheer willpower.

--- a/Witch-Project/src/App.css
+++ b/Witch-Project/src/App.css
@@ -22,6 +22,18 @@ body::-webkit-scrollbar,
 }
 
 
+/* ======================= */
+/* CUSTOM CURSOR VARIABLE */
+/* ======================= */
+
+a,
+button,
+input[type="button"],
+input[type="submit"],
+[role="button"] {
+  cursor: url('../src/assets/customCursor.svg') 0 0, pointer !important;
+}
+
 html{
   background-image: url("./assets/background.png");
   background-color: #3A2D34;
@@ -1284,10 +1296,10 @@ align-items: center;
 
 .sanctum-control-room{
   position: absolute;
-  bottom: 30vh;
-  left: 28%;
-  transform: translateX(-50%);
-  width: 320px;
+  /* bottom: 30vh; */
+  left: 25%;
+  /* transform: translateX(-50%); */
+  width: auto;
   z-index: 100;
   animation: modalFadeIn 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
 }
@@ -1297,11 +1309,28 @@ align-items: center;
   border-radius: 8px;
 }
 
+.spotify-action-btn{
+  background-color: #1DB954; 
+  color: #fff;
+   border: none;
+    padding: 10px 20px; 
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.close-rhythm-btn{
+  margin-bottom: 1px;
+margin-left: 13em;
+position: relative;
+  right: 0;
+  top: 0 !important;
+}
+
 .alter-setup{
   position: absolute;
 bottom: 15vh;
 left: 28%;
-transform: translateY(50%);
+transform: translateY(10%);
 z-index: 15;
 width: 12vw;
 display: flex;
@@ -1311,32 +1340,38 @@ align-items: center;
 
 .alter-setup .magical-radio{
   position: relative;
-  width: 6vw;
+  width: 7vw;
   height: auto;
-  margin-bottom: -10px; /*sit on the table <3*/
+
 }
 
 .alter-setup .ritual-table{
-  width: 10vw;
+  width: 17vw;
   height: auto;
 }
 
+.ritual-table img{
+  width: 100%;
+  height: 100%;
+}
+
 .ritual-table{
-  width: 220px;
+
   position: relative;
   z-index: 1;
+
 }
+
 .magical-radio {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: -110px;
+  transform-origin: bottom center;
   z-index: 5;
+  bottom: -20px;
 
 
   transition: transform 0.3s ease-in-out;
   animation: sanctumWiggle 4s ease-in-out infinite;
-  transform-origin: bottom center;
+
 }
 
 /* INTENSIFY aurs */
